src/snapshots/tptp__top__tests__name_list-3.snap
---
source: src/top.rs
expression: parsed
---
NameList(
    [
        AtomicWord(
            Lower(
                LowerWord(
                    "name",
                ),
            ),
        ),
    ],
)
