src/snapshots/tptp__top__tests__name_list.snap
---
source: src/top.rs
expression: parsed
---
NameList(
    [
        AtomicWord(
            Lower(
                LowerWord(
                    "name",
                ),
            ),
        ),
        AtomicWord(
            SingleQuoted(
                SingleQuoted(
                    "name",
                ),
            ),
        ),
        Integer(
            Integer(
                "123",
            ),
        ),
    ],
)
