src/snapshots/tptp__top__tests__optional_info-3.snap
---
source: src/top.rs
expression: parsed
---
OptionalInfo(
    Some(
        UsefulInfo(
            GeneralList(
                Some(
                    GeneralTerms(
                        [
                            Data(
                                Variable(
                                    Variable(
                                        UpperWord(
                                            "X",
                                        ),
                                    ),
                                ),
                            ),
                            Data(
                                Variable(
                                    Variable(
                                        UpperWord(
                                            "Y",
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
    ),
)
