src/snapshots/tptp__top__tests__tptp_input-3.snap
---
source: src/top.rs
expression: parsed
---
Annotated(
    Tfx(
        TfxAnnotated(
            Annotated {
                name: AtomicWord(
                    Lower(
                        LowerWord(
                            "test",
                        ),
                    ),
                ),
                role: FormulaRole(
                    LowerWord(
                        "axiom",
                    ),
                ),
                formula: Logic(
                    Unitary(
                        Atomic(
                            Defined(
                                DefinedAtomic(
                                    Constant(
                                        DefinedConstant(
                                            DefinedFunctor(
                                                AtomicDefinedWord(
                                                    DollarWord(
                                                        LowerWord(
                                                            "true",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
                annotations: Annotations(
                    None,
                ),
            },
        ),
    ),
)
