src/snapshots/tptp__top__tests__tptp_input-7.snap
---
source: src/top.rs
expression: parsed
---
Annotated(
    Cnf(
        CnfAnnotated(
            Annotated {
                name: AtomicWord(
                    Lower(
                        LowerWord(
                            "test",
                        ),
                    ),
                ),
                role: FormulaRole(
                    LowerWord(
                        "axiom",
                    ),
                ),
                formula: Disjunction(
                    Disjunction(
                        [
                            Atomic(
                                Defined(
                                    Plain(
                                        DefinedPlainFormula(
                                            Constant(
                                                DefinedConstant(
                                                    DefinedFunctor(
                                                        AtomicDefinedWord(
                                                            DollarWord(
                                                                LowerWord(
                                                                    "true",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
                annotations: Annotations(
                    None,
                ),
            },
        ),
    ),
)
