src/snapshots/tptp__top__tests__tptp_input.snap
---
source: src/top.rs
expression: parsed
---
Include(
    Include {
        file_name: FileName(
            SingleQuoted(
                "test",
            ),
        ),
        selection: FormulaSelection(
            None,
        ),
    },
)
