src/snapshots/tptp__top__tests__useful_info.snap
---
source: src/top.rs
expression: parsed
---
UsefulInfo(
    GeneralList(
        Some(
            GeneralTerms(
                [
                    Data(
                        Variable(
                            Variable(
                                UpperWord(
                                    "X",
                                ),
                            ),
                        ),
                    ),
                    Data(
                        Variable(
                            Variable(
                                UpperWord(
                                    "Y",
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
